# PmuSim

./: .gitignore  Cargo.toml  README.md  README_CN.md  main.py
.github/workflows/: release.yml
crates/pmusim-app/: Cargo.toml  tauri.conf.json
crates/pmusim-app/icons/: icon.icns
crates/pmusim-app/src/: commands.rs  events.rs  main.rs  state.rs
crates/pmusim-app/src/network/: master.rs  mod.rs  session.rs
crates/pmusim-core/: Cargo.toml
crates/pmusim-core/src/: error.rs  lib.rs  time_utils.rs
crates/pmusim-core/src/protocol/: builder.rs  constants.rs  crc16.rs  frame.rs  mod.rs  parser.rs
docs/superpowers/plans/: 2026-04-14-pmu-master-station-simulator.md  2026-04-15-rust-tauri-migration.md
docs/superpowers/specs/: 2026-04-14-pmu-master-station-simulator-design.md  2026-04-15-rust-tauri-migration-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.vue
frontend/src/components/: ConfigTab.vue  DataTab.vue  LogTab.vue  StationListPanel.vue  ToolbarPanel.vue
frontend/src/composables/: useCommLog.ts  usePmuEvents.ts  useSessions.ts
frontend/src/types/: index.ts
network/: master.py  session.py
protocol/: __init__.py  builder.py  constants.py  crc16.py  frames.py  parser.py
tests/: test_builder.py  test_crc16.py  test_e2e.py  test_parser.py  test_time_utils.py
ui/: app.py  config_panel.py  data_panel.py  log_panel.py  station_list.py  toolbar.py
utils/: time_utils.py
