[package]
name = "pmusim-app"
version = "0.1.0"
edition = "2021"

[dependencies]
pmusim-core = { path = "../pmusim-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
